# jtools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: format.yml  test.yml  tests.yml
ast/: Cargo.toml
ast/src/: node.rs
benches/: Cargo.toml
benches/src/: bench.rs  lib.rs
cli/: Cargo.toml
cli/src/: cli_args.rs  lib.rs
config/src/: lib.rs
criterion-example/parse_formatted_json/report/: index.html
criterion-example/parse_formatted_json/size/128KB/base/: benchmark.json  estimates.json
criterion-example/parse_formatted_json/size/128KB/new/: sample.json  tukey.json
criterion-example/parse_formatted_json/size/128KB/report/: index.html
criterion-example/parse_formatted_json/size/1MB/base/: estimates.json  sample.json  tukey.json
criterion-example/parse_formatted_json/size/1MB/new/: benchmark.json
criterion-example/parse_formatted_json/size/1MB/report/: index.html
criterion-example/parse_formatted_json/size/256KB/base/: benchmark.json  estimates.json  sample.json
criterion-example/parse_formatted_json/size/256KB/new/: tukey.json
criterion-example/parse_formatted_json/size/256KB/report/: index.html
criterion-example/parse_formatted_json/size/5MB/base/: tukey.json  (+1 more)
criterion-example/parse_formatted_json/size/report/: index.html
criterion-example/parse_minified_json/report/: index.html
criterion-example/parse_minified_json/size/report/: index.html
criterion-example/report/: index.html
error_display/: Cargo.toml
error_display/src/: error_display.rs
error_preview/: Cargo.toml
error_preview/src/: error_preview.rs  lib.rs
format/: Cargo.toml
format/src/: formatter.rs  lib.rs  minifier.rs
jtools/: Cargo.toml
jtools/src/: main.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lexer_error.rs  lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs  parser_error.rs  property_map.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  previewer.rs  scanner.rs  scanner_error.rs  scanner_error_update.rs  scanner_update.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: bench.rs  integration.rs
token/: Cargo.toml
token/src/: lib.rs  token.rs  token_collection.rs  token_type.rs
(+43 files in other folders)
