[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
token = { path = "../token" }
scanner = { path = "../scanner" }
ast = { path = "../ast" }
parser = { path = "../parser" }
format = { path = "../format" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false
