[package]
name = "benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
token = { path = "../token" }
scanner = { path = "../scanner" }
ast = { path = "../ast" }
parser = { path = "../parser" }
format = { path = "../format" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false
