[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
token = { path = "../token" }
ast = { path = "../ast" }
scanner = { path = "../scanner" }
format = { path = "../format" }
parser = { path = "../parser" }
