[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
token = { path = "../token" }
scanner = { path = "../scanner" }
ast = { path = "../ast" }
parser = { path = "../parser" }
format = { path = "../format" }
